# dinky

./: CHANGELOG.md  COPYING  Cargo.toml  README.md  build.rs  example.config.toml  example.css  example.form.html  example.template.html  index.html
.github/workflows/: coverage.yml  release.yml
src/: conf.rs  db.rs  db_models.rs  db_schema.rs  hash.rs  http.rs  main.rs
systemd/: dinky.service
