[package]
name = "dinky"
version = "0.1.0"
authors = ["Edward Cragg <drq.11235@gmail.com>"]
edition = "2018"

[dev-dependencies]
diff = "0.1.11"

[dependencies]
serde = "1.0.88"
serde_derive = "1.0.88"
docopt = "1.1.0"
log = "0.4.6"
stderrlog = "0.4.1"
atty = "0.2.11"
iron = "0.6.0"
params = "0.8.0"
router = "0.6.0"
harsh = "0.1.6"
url = "1.7.2"
directories = "2.0.2"
failure = "0.1.5"
toml = "0.5.3"
time = "0.1.42"
lazy_static = "1.4.0"
diesel = { version = "1.4.2", features = ["sqlite"] }
